# ChangeLog for gnustep-base/gnustep-base
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.89 2009/09/22 02:18:13 tgall Exp $

  21 Sep 2009; Tom Gall <tgall@gentoo.org> gnustep-base-1.18.0-r4.ebuild:
  keyword ~ppc64

  19 Jul 2009; nixnut <nixnut@gentoo.org> gnustep-base-1.18.0-r4.ebuild:
  ppc stable #272673

  11 Jun 2009; Markus Meier <maekke@gentoo.org>
  gnustep-base-1.18.0-r4.ebuild:
  amd64 stable, bug #272673

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  gnustep-base-1.18.0-r4.ebuild:
  stable x86, bug 272673

*gnustep-base-1.18.0-r4 (02 Jun 2009)

  02 Jun 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.18.0-r4.ebuild, metadata.xml:
  Use virtual/libffi instead of gcc[libffi], bug #272062

  24 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -gnustep-base-1.16.3-r1.ebuild, -gnustep-base-1.18.0-r1.ebuild,
  -gnustep-base-1.18.0-r2.ebuild, gnustep-base-1.18.0-r3.ebuild:
  Force >=gnustep-make-2.0.8, for correct native exceptions handling. Thanks
  Sourav K. Mandal <sourav.mandal@gmail.com> for suggestion. Also remove
  some versions

*gnustep-base-1.18.0-r3 (11 Mar 2009)

  11 Mar 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +files/gnustep-base-1.18.0-mdns_configure.patch,
  +gnustep-base-1.18.0-r3.ebuild:
  Fix automagic dependency on mdns-responder, spotted by flameeyes

*gnustep-base-1.18.0-r2 (23 Feb 2009)

  23 Feb 2009; Bernard Cafarelli <voyageur@gentoo.org>
  +gnustep-base-1.18.0-r2.ebuild:
  revdep-rebuild is not recursive, new SEARCH_DIRS now points to tools and
  libraries directories. Spotted by flameeyes on binutils update

*gnustep-base-1.18.0-r1 (28 Jan 2009)

  28 Jan 2009; Bernard Cafarelli <voyageur@gentoo.org>
  -gnustep-base-1.18.0.ebuild, +gnustep-base-1.18.0-r1.ebuild:
  Check that native exceptions are disabled in gnustep-make when using
  ffcall, they only work with libffi
