@@ -1,11 +1,8 @@
 AUX 50-gnustep-revdep 35 RMD160 f9508891da2de58ef884baabf9206577653a409b SHA1 40e21ae24078afb92067f51ca82722f20b742512 SHA256 e0bde19a964f2ae01855b4353c3d2af7b0b0ca25231827798ebfea16e435d3a2
 AUX gnustep-base-1.18.0-mdns_configure.patch 899 RMD160 1accfd45753666d95ffbac304f91d9f7f93fed10 SHA1 c847efcbfd2b3ce43ba79bec94c8ba4c0fcc54bf SHA256 a6613e90f24bbc18d43a9fe4ee669afedc613853eaac33547a95cc6a6e2848e2
 DIST gnustep-base-1.16.3.tar.gz 2532346 RMD160 11d387437b13b0fe439df6b354ebece767ccee2a SHA1 a06ffac4972416b814682821f959bcf29bead47a SHA256 81e1f150c4d2547877066fda4ce9d0b07c18a489b94e6b171cbb16ccdcb4137b
-DIST gnustep-base-1.16.5.tar.gz 2539752 RMD160 595d69a67ddb79a5aaf111d25d00294c16e8b53c SHA1 1d98fd25a98ddc70c3b41151c6013ab3a106ceca SHA256 7417c68e25d923626fd2f2b345fc7501dba0f62f16f154a91c0d7798ebcfde56
 DIST gnustep-base-1.18.0.tar.gz 2565694 RMD160 8cad9ac1ea0775ca4d2af0db76f1f457eda5784d SHA1 30c13e673ad550c988f03adb9c545a8de1a17d19 SHA256 3c94ce1711b188b34fb750176d5d2e81d0010e323625bc4b79d550846a299ddd
-EBUILD gnustep-base-1.16.3.ebuild 2694 RMD160 b5683d1041977f62716e0690700287dd3a8a2d33 SHA1 5686cc5da2d42c01aa668bce6f8edabd9caff6f3 SHA256 837036b8ba94ee0a718a889bdb63208d89d101c08a175ba0db38d65e23669653
-EBUILD gnustep-base-1.16.5.ebuild 2232 RMD160 b0d81bd9623659e57eef31c590658c9110d2ff77 SHA1 ac6cf885e275d1359e05e38a761facea97bc6146 SHA256 81dce3aae2cdc14ff22b503dba4d1591c90a04fcd295719592339dc62eaa78e7
-EBUILD gnustep-base-1.18.0-r3.ebuild 2770 RMD160 0bc2c7cca06dfe8b05b63dfbd00302171d24226e SHA1 29b68ce05b5a3e5795b1207ad46da092d725be18 SHA256 1ed587e177b7c8e81d446774182475177d53c4a6ee1a62e711112fe44be1555d
+EBUILD gnustep-base-1.16.3.ebuild 2124 RMD160 e14fb0c5cfafd38c25d0dbb648cb6f004785ec91 SHA1 1c0032fd501d7a33e740fe5a62b8da41063242d1 SHA256 b791fa6991974e7199bc2c8bb5ea9afcc841f3c8b17c571f1e7fad9bc9cd9f32
 EBUILD gnustep-base-1.18.0-r4.ebuild 2819 RMD160 f23dbf84a4c5268b51af02289625a8e5b712cd3f SHA1 0bc6b4081cc96b7797f775830fd1c13ee30f7fac SHA256 3ac8471abb605d8d11d5b6b12ee2a6fac10523aa7badec94eac472c39a8db6b5
-MISC ChangeLog 19420 RMD160 f1442028830e5589fc5e0305bb90347cb88f90bb SHA1 a7e26c202cfd898c669a0ddb6ff45b92097df58a SHA256 a70bde0e7a1de4e919e9cbd720f531ad363e4b0a1c42fa16da450213ffe9df17
-MISC metadata.xml 968 RMD160 fa9a95bbd230615a2b87a90d4fce772d8ff485f0 SHA1 109a94bb550067087ab18e0b27cc61c7cc4021d4 SHA256 06a58beac6750dc03f6264d183d83a394384b176d9636b5b09c48b8e67b8ec1a
+MISC ChangeLog 19610 RMD160 6743bb81537bfdba3f0e7292a6c5d91986e7bf4b SHA1 e30d7dd412ef4f4b3b814281db8d4fa611a2c275 SHA256 4235d17db41078e3690c61c22c82472c9ef3e299a5f077a605009dc40718429c
+MISC metadata.xml 780 RMD160 ba5d751d9c5ea583109639f2aeb932fdf562c7a2 SHA1 3d0a3b8ca2af826ca0baa820cb62eafb462d0dbc SHA256 164fd2e1b78e8755408bb322e7ea11175d1cfc58d8d5d447ea9acc8a7ca88b43
