@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/gnustep-base-1.16.3.ebuild,v 1.4 2008/10/03 17:21:15 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/gnustep-base-1.16.3.ebuild,v 1.5 2009/10/14 09:48:03 ssuominen Exp $
 
 inherit gnustep-base
 
@@ -12,12 +12,11 @@ KEYWORDS="~amd64-linux ~x86-linux ~sparc-solaris ~x86-solaris"
 SLOT="0"
 LICENSE="GPL-2 LGPL-2.1"
 
-IUSE="gcc-libffi gnutls"
+IUSE="gnutls"
 
 DEPEND="${GNUSTEP_CORE_DEPEND}
 	>=gnustep-base/gnustep-make-2.0
-	!gcc-libffi? ( dev-libs/ffcall )
-	gcc-libffi? ( >=sys-devel/gcc-3.3.5 )
+	dev-libs/ffcall
 	gnutls? ( net-libs/gnutls )
 	>=dev-libs/libxml2-2.6
 	>=dev-libs/libxslt-1.1
@@ -28,25 +27,13 @@ RDEPEND="${DEPEND}"
 
 pkg_setup() {
 	gnustep-base_pkg_setup
-
-	if use gcc-libffi && ! built_with_use sys-devel/gcc libffi; then
-		eerror "You have enabled the gcc-libffi USE flag, however gcc was not compiled with USE=libffi"
-		eerror "Please recompile sys-libs/gcc with USE=libffi, or disable the gcc-libffi USE flag"
-		die "libffi support not available"
-	fi
 }
 
 src_compile() {
 	egnustep_env
 
 	local myconf
-	if use gcc-libffi;
-	then
-		myconf="--enable-libffi --disable-ffcall"
-		myconf="${myconf} --with-ffi-library=$(gcc-config -L) --with-ffi-include=$(gcc-config -L | sed 's/:.*//')/include/libffi"
-	else
-		myconf="--disable-libffi --enable-ffcall"
-	fi
+	myconf="--disable-libffi --enable-ffcall"
 
 	myconf="$myconf $(use_enable gnutls tls)"
 	myconf="$myconf --with-xml-prefix=${EPREFIX}/usr"
