@@ -1,6 +1,11 @@
 # ChangeLog for gnustep-base/gnustep-base
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.89 2009/09/22 02:18:13 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-base/ChangeLog,v 1.90 2009/10/14 09:48:03 ssuominen Exp $
+
+  14 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
+  gnustep-base-1.16.3.ebuild, metadata.xml:
+  Remove USE gcc-libffi because it's conflicting with dev-libs/libffi in
+  ld.so.conf.
 
   21 Sep 2009; Tom Gall <tgall@gentoo.org> gnustep-base-1.18.0-r4.ebuild:
   keyword ~ppc64
